# Fickle-Monolithic

backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  logging.ini  main.py  pyproject.toml
backend/app/: alembic.ini  celery_worker.py  model.py  pyproject.toml  utils.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: login.py  problemstatement.py  solution.py  user.py  wishlist.py
backend/app/app/: model.py
backend/app/app/core/: settings.py
backend/app/app/db/: db_init.py
backend/app/app/migration/: env.py
backend/app/app/schema/: __init__.py  problemstatement.py
backend/app/core/: db_init.py  security.py  settings.py
backend/app/crud/: problemstatment.py  solution.py  user.py
backend/app/db/: model.py
backend/app/email-templete/: emailverification_templete.html  forgetpassword_templete.html
backend/app/migration/: env.py
backend/app/migration/versions/: 21a7a30df2fd_.py  ef682cf044b3_.py
backend/app/schema/: __init__.py  baseuuid.py  problemstatement.py  solution.py  user.py
backend/app/template/: emailverification_template.html  forgetpassword_templete.html  verficationfailed.html  verificationsuccess.html
backend/tests/: conftest.py
backend/tests/test_endpoints/: test_user.py
