[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Amirdhesh <amirdhesh2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
sqlmodel = "^0.0.16"
pytest = "^8.1.1"
httpx = "^0.27.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
celery = "^5.4.0"
redis = "^5.0.4"
bcrypt = "^4.1.2"
pytz = "^2024.1"
pyjwt = "^2.8.0"
flower = "^2.0.1"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
uvicorn = "^0.30.1"
fastapi-limiter = "^0.1.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
